# lwip

./: .editorconfig  .eslintignore  .eslintrc.yaml  .gitignore  .npmignore  .nycrc  .releaserc  .snyk  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CPPLINT.cfg  DEVELOPMENT.md  LICENSE  LwipImage.cpp  README.md  appveyor.yml  binding.gyp  defs.js  gifdemo.js  index.js  lwip.cpp  lwip.h  lwipImage.h  package-lock.json  package.json  typings.d.ts
examples/: .eslintrc.yaml  blur.js  border.js  clone.js  contain.js  convert.js  convert_gif_png.js  convert_jpg_png.js  convert_png_gif.js  convert_png_jpg.js  cover.js  crop.js  extract.js  fade.js  gif_interlaced.js  hsl.js  hue.js  lighten.js  mirror.js  open_pixelbuffer.js  pad.js  paste_blend.js  paste_mosiac.js  png_interlaced.js  progressive.js  reduce_quality.js  rotate.js  rotate_scale_batch.js  rotate_scale_blur.js  saturate.js  scale_down.js  set_pixel.js  sharpen.js  write_file.js  write_file_batch.js
lib/: Batch.js  BatchPrototypeInit.js  Image.js  ImagePrototypeExtensions.js  ImagePrototypeInit.js  defs.js  obtain.js  util.js
lib/cimg/: README.txt
lib/cimg/examples/: CImg_demo.cpp  CMakeLists.txt  Makefile  captcha.cpp  curve_editor2d.cpp  dtmri_view3d.cpp  edge_explorer2d.cpp  fade_images.cpp  gaussian_fit1d.cpp  generate_loop_macros.cpp  hough_transform2d.cpp  image2ascii.cpp  image_registration2d.cpp  image_surface3d.cpp  jawbreaker.cpp  mcf_levelsets2d.cpp  mcf_levelsets3d.cpp  odykill.cpp  pde_TschumperleDeriche2d.cpp  pde_heatflow2d.cpp  plotter1d.cpp  radon_transform2d.cpp  scene3d.cpp  spherical_function3d.cpp  tetris.cpp  tron.cpp  tutorial.cpp  use_RGBclass.cpp  use_chlpca.cpp  use_cimgIPL.cpp  use_cimgmatlab.cpp  use_cimgmatlab.m  use_draw_gradient.cpp  use_jpeg_buffer.cpp  use_nlmeans.cpp  use_patchmatch.cpp  use_skeleton.cpp  use_tiff_stream.cpp  wavelet_atrous.cpp
lib/cimg/examples/img/: CImg_demo.h  lena.pgm  parrot_mask.pgm  parrot_original.ppm  sh0r.pgm  sh1r.pgm  tetris.h
lib/cimg/html/: CImg.doxygen  CImg_documentation.h  download.shtml  footer.html  header.html  header2.html  header_reference.html  index.shtml  links.shtml  news.shtml  screenshots.shtml
lib/cimg/plugins/: add_fileformat.h  chlpca.h  cimgIPL.h  cimg_ipl.h  cimgmatlab.h  draw_gradient.h  jpeg_buffer.h  loop_macros.h  nlmeans.h  opencv.h  patchmatch.h  skeleton.h  tiff_stream.h  vrml.h  vtk.h
lib/cimg/resources/: compile_win_icl.bat  compile_win_visualcpp.bat
lib/jpeg/: jcarith.c  jconfig.h  jdarith.c
lib/jpeg-compressor/: jpge.cbp  stb_image.c  tga2jpg.cpp
lib/png/: ANNOUNCE  CHANGES  CMakeLists.txt  INSTALL  LICENSE  TODO  configure  example.c  libpng-manual.txt  libpng.3  libpngpf.3  png.5  pngget.c  pnglibconf.h  pngpriv.h  pngread.c  pngrtran.c  pngtest.c  pngtrans.c  pngwio.c  pngwrite.c  pngwutil.c
lib/png/scripts/: README.txt  def.dfn  descrip.mms  dfn.awk  intprefix.dfn  libpng-config-head.in  libpng.pc.in  makefile.32sunu  makefile.64sunu  makefile.aix  makefile.amiga  makefile.atari  makefile.bc32  makefile.beos  makefile.bor  makefile.cegcc  makefile.darwin  makefile.dec  makefile.dj2  makefile.elf  makefile.freebsd  makefile.gcc  makefile.hp64  makefile.hpgcc  makefile.hpux  makefile.ibmc  makefile.intel  makefile.knr  makefile.linux  makefile.mips  makefile.msc  makefile.msys  makefile.ne12bsd  makefile.netbsd  makefile.openbsd  makefile.sco  makefile.sggcc  makefile.sgi  makefile.so9  (+11 more)
src/: LwipDecoder.cpp  LwipEncoder.cpp  LwipEncoder.h  LwipImage.cpp  LwipImage.h  lwip.cpp  lwip.h
src/decoder/: buffer_worker.cpp  decoder.h  file_worker.cpp  gif_decoder.cpp  init.cpp  jpeg_decoder.cpp  png_decoder.cpp  pnglibconf.h  util.cpp
src/encoder/: encoder.h  gif_worker.cpp  init.cpp  jpeg_worker.cpp  png_worker.cpp  pnglibconf.h
src/image/: blur_worker.cpp  build_worker.cpp  crop_worker.cpp  hsl_worker.cpp  hsla_worker.cpp  image.cpp  image.h  init.cpp  mirror_worker.cpp  opacify_worker.cpp  pad_worker.cpp  paste_worker.cpp  resize_worker.cpp  rotate_worker.cpp  setpixel_worker.cpp  sharpen_worker.cpp
src/shared/: gifsub.h
test/: index.js
tests/: .mocharc.js  NOTES.md  imgs.js  mocha.opts  utils.js
tests/0.argsValidation/: 0.open.js  00.open.js  01.image.resize.js  02.image.scale.js  05.image.writeFile.js  1.image.resize.js  10.batch.writeFile.js  2.image.scale.js  3.image.rotate.js  4.image.crop.js  4.image.toBuffer.js  NOTES.md
tests/00.argsValidation/: 000.open.js  001.open.js  002.create.js  003.image.rotate.js  007.image.pad.js  008.image.border.js  04.image.toBuffer.js  05.image.writeFile.js  09.batch.toBuffer.js  101.image.resize.js  102.batch.scale.js  102.image.scale.js  103.batch.rotate.js  103.image.rotate.js  104.batch.toBuffer.js  104.image.toBuffer.js  105.batch.writeFile.js  105.image.writeFile.js  106.batch.mirror.js  106.image.mirror.js  107.batch.pad.js  107.image.pad.js  108.batch.border.js  108.image.border.js  109.image.paste.js  110.image.getPixel.js  110.image.setPixel.js  201.batch.resize.js  202.batch.scale.js  203.batch.rotate.js  204.batch.toBuffer.js  205.batch.writeFile.js  206.batch.mirror.js  207.batch.pad.js  208.batch.border.js  209.batch.paste.js  210.batch.setPixel.js
tests/01.getters/: index.js
tests/02.operations/: 00.open.js  001.open.js  002.create.js  01.writeFile.js  03.scale.js  04.rotate.js  05.crop.js  06.blur.js  07.mirror.js  08.pad.js  09.border.js  101.writeFile.js  102.resize.js  103.scale.js  104.rotate.js  105.crop.js  106.blur.js  107.mirror.js  108.pad.js  109.border.js  11.saturate.js  110.sharpen.js  111.saturate.js  112.lighten.js  113.darken.js  114.hue.js  115.hslaAdjust.js  116.fade.js  116.opacify.js  117.paste.js  118.setPixel.js  119.contain.js  12.lighten.js  120.cover.js  121.setMetadata.js  13.darken.js  14.hue.js  15.hslAdjust.js  15.hslaAdjust.js  16.fade.js
tests/03.batch/: index.js
tests/03.safety/: 00.locks.js  00.releases.js  01.releases.js  02.clone.js  03.extract.js
tests/04.batch/: index.js
tests/04.stress/: index.js
tests/05.stress/: index.js
tests/1.operations/: 00.open.js
tests/images/: rgbpng
(+169 files in other folders)
